# parallel-hparam-search

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml
phs/: index.html
phs/cli/: index.html
phs/cli/collate/: index.html
phs/cli/generateHparams/: index.html
phs/cli/preprocess/: index.html
phs/cli/train/: index.html
phs/datasetFunctions/: index.html
phs/trainFunctions/: index.html
search/: search_index.json
src/phs/: __init__.py  collate.py  datasetFunctions.py  generateHparams.py  preprocess.py  train.py  trainFunctions.py
src/phs/cli/: collate.py  generateHparams.py  preprocess.py  train.py
tests/: test_add_one.py
