
[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "phs"
version = "1.0.1"               # May be automated using CI/CD
authors = [
  { name="Raghav B. Venkataramaiyer", email="bv.raghav@thapar.edu" },
]
# maintainers = [
#   { name="Raghav B. Venkataramaiyer",
#     email="bvraghav@gmail.com" },
# ]
description = "Parallel Hyperparameter Search"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # See: https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Unix Shell",
]
dependencies = ["click"]

[project.scripts]
train = "phs.cli.train:main"
preprocess = "phs.cli.preprocess:main"
collate = "phs.cli.collate:main"
generateHparams = "phs.cli.generateHparams:main"

[project.urls]
Homepage = "https://github.com/bvraghav/parallel-hyperparameter-search.git"
Issues = "https://github.com/bvraghav/parallel-hyperparameter-search.git/issues"

# 

# Adapted from https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# THE END -------------------------------------------
